x264enc: Properly set the stream format in setcaps

Do not forget to set the selected format to the options string
when getting it from caps

https://bugzilla.gnome.org/show_bug.cgi?id=655223